- Position saves at drag stop and not on toggle now (No need to toggle it off after dragging the frame)
- Most saved settings resetted (Due to better default values)
- Modified options page layout
- Shift+Click on one of the time values will send the time left informations to the group or the instance chat again
- Unlocked timer shows demo data if not currently in an mythic+ dungeon

MythicPlusTimer 2.8
===================================
- Add size scale
- Add option to reset scale / position
- Add option to lock / unlock timer frame
- Improve frame movement option

MythicPlusTimer 2.7
===================================
- Use better timer value
- Improved draw performance

MythicPlusTimer 2.6
===================================
- Death counter is always correct now
- Added a tooltip to the death count that shows who died and how often (uses the combat log event)
- Updated tooltip positions
- Updated frame positions to better support different default font styles
- Added progress needed until next reaping (optional, enabled by default)
- Added an option to show affixes as icons (optional, disabled by default)
- Added an option to show affixes as text (optional, enabled by default)
- Added an option to hide the default objective tracker (optional, enabled by default)

MythicPlusTimer 2.5
===================================
- Update for WoW 8.1

MythicPlusTimer 2.4
===================================
- Added option to automatically insert the keystone (optional, enabled by default)

MythicPlusTimer 2.3
===================================
- Added absolute numbers for enemy forces progress (optional, disabled by default)

MythicPlusTimer 2.2
===================================
- Added zhCN translations (Created by Littlebaoooo (https://wow.curseforge.com/members/Littlebaoooo), thanks)

MythicPlusTimer 2.1
===================================
- Removed Loot / No Loot text

MythicPlusTimer 2.0
===================================
- Update for WoW 8.0

MythicPlusTimer 1.7